--- a/code/Try47.Rmd
+++ b/code/Try47.Rmd
@@ -12,23 +12,24 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ```{r pkgs}
 pacman::p_load(
-  MASS,
-  dplyr,
-  tibble,
-  purrr,
-  furrr,
-  readr,
-  ggplot2,
-  tidyr,
   broom,
-  lubridate,
-  here,
-  scales,
+  dplyr,
+  effectsize,
+  forcats,
+  furrr,
+  ggforce,
+  ggplot2,
+  ggrepel,
   glue,
   gt,
-  forcats,
-  ggrepel
-)
+  here,
+  lubridate,
+  MASS,
+  purrr,
+  readr,
+  scales,
+  tibble,
+  tidyr)
 
 dt <- lubridate::today()
 dir.create("results", showWarnings = FALSE)
@@ -558,7 +559,7 @@ write.csv(cov_grid,   file = here::here(paste0("results/cov_grid_", dt, ".csv"))
 
 
 ```{r descr}
-# Focus on the Gamma Part-2 interaction (can switch to "ATT" similarly)
+# Focus on the Gamma Part-2 interaction (can switch to "ATT" later)
 summ_gamma <- summ_grid %>%
   dplyr::filter(model == "gamma") %>%
   dplyr::mutate(
@@ -567,8 +568,11 @@ summ_gamma <- summ_grid %>%
     )
   )  
 
-# Bias
-tab_gamma_bias <- summ_gamma %>%
+# ---- Bias (overall) ----
+# mean_bias is average SIGNED bias; preserves direction of estimator's errors, where neg is systematic underestimation and positive is systematic overestimation and opposing signs are going to cancel each other out. 
+# The mean_abs_bias is the average absolute magnitude of the bias, which measures how far the estimator is from the truth on average. Does not allow pos/neg to cancel each other out. Always >=0. Larger values indicate more inconsistent or unstable estimation. 
+# Mean_abs_bias captures estimator error magnitude, while mean_bias captures estimator direction. mean_bias answers if treatment method systematically over or under estimates the effect, while mean_abs_bias answers how large are the estimation errors, regardless of direction. A method an have a mean bias of 0 and look good but actually perform poorly when you see a large mean_abs_bias because that means it swings pos in some directions, negative in others. 
+tab_gamma_bias_overall <- summ_gamma %>%
   dplyr::group_by(treatment) %>%
   dplyr::summarise(
     scenarios      = dplyr::n(),
@@ -579,7 +583,7 @@ tab_gamma_bias <- summ_gamma %>%
     .groups = "drop"
   )
 
-gt_gamma_bias <- tab_gamma_bias %>%
+gt_gamma_bias_overall <- tab_gamma_bias_overall %>%
   dplyr::mutate(
     mean_bias     = scales::number(mean_bias, accuracy = 0.0001),
     median_bias   = scales::number(median_bias, accuracy = 0.0001),
@@ -592,47 +596,543 @@ gt_gamma_bias <- tab_gamma_bias %>%
     subtitle = "Negative = underestimation; Positive = overestimation"
   ) %>%
   gt::tab_options(data_row.padding = gt::px(1))
-gt_gamma_bias
 
-# Table: Descriptive statistics across ALL scenarios (collapse over n/prop/mag)
-tab_gamma_overall <- summ_gamma %>%
-  group_by(treatment) %>%
-  summarise(
-    scenarios = dplyr::n(),
-    mean_bias   = mean(bias, na.rm = TRUE),
-    median_bias = median(bias, na.rm = TRUE),
-    mad_bias    = mad(bias, na.rm = TRUE),
-    mean_abs_bias = mean(abs(bias), na.rm = TRUE),
+# ---- Empirical SE (overall) ----
+tab_gamma_empse_overall <- summ_gamma %>%
+  dplyr::group_by(treatment) %>%
+  dplyr::summarise(
+    scenarios   = dplyr::n(),
     mean_emp_se = mean(emp_se, na.rm = TRUE),
     sd_emp_se   = sd(emp_se, na.rm = TRUE),
-    mean_cov    = mean(coverage, na.rm = TRUE),
-    p_cov_below_95 = mean(coverage < 0.95, na.rm = TRUE),   # share of scenarios under nominal
     .groups = "drop"
   )
 
-# Render nicely
-gt_gamma_overall <- tab_gamma_overall %>%
-  mutate(
-    mean_bias = scales::number(mean_bias, accuracy = 0.0001),
-    median_bias = scales::number(median_bias, accuracy = 0.0001),
-    mad_bias = scales::number(mad_bias, accuracy = 0.0001),
-    mean_abs_bias = scales::number(mean_abs_bias, accuracy = 0.0001),
+gt_gamma_empse_overall <- tab_gamma_empse_overall %>%
+  dplyr::mutate(
     mean_emp_se = scales::number(mean_emp_se, accuracy = 0.0001),
-    sd_emp_se = scales::number(sd_emp_se, accuracy = 0.0001),
-    mean_cov = scales::percent(mean_cov, accuracy = 0.1),
+    sd_emp_se   = scales::number(sd_emp_se, accuracy = 0.0001)
+  ) %>%
+  gt::gt() %>%
+  gt::tab_header(
+    title = "Gamma Interaction — Descriptive Statistics: Empirical SE (All Scenarios)",
+    subtitle = "Empirical SE = Monte Carlo SD of the estimator across replications"
+  ) %>%
+  gt::tab_options(data_row.padding = gt::px(1))
+
+# ---- Coverage (overall) ----
+tab_gamma_cov_overall <- summ_gamma %>%
+  dplyr::group_by(treatment) %>%
+  dplyr::summarise(
+    scenarios       = dplyr::n(),
+    mean_cov        = mean(coverage, na.rm = TRUE),
+    p_cov_below_95  = mean(coverage < 0.95, na.rm = TRUE),
+    .groups = "drop"
+  )
+
+gt_gamma_cov_overall <- tab_gamma_cov_overall %>%
+  dplyr::mutate(
+    mean_cov       = scales::percent(mean_cov, accuracy = 0.1),
     p_cov_below_95 = scales::percent(p_cov_below_95, accuracy = 0.1)
   ) %>%
   gt::gt() %>%
   gt::tab_header(
-    title = "Gamma Interaction: Descriptive Statistics by Treatment (All Scenarios)",
-    subtitle = "Bias (<0 underestimates), empirical SE (MC SD), and coverage"
+    title = "Gamma Interaction — Descriptive Statistics: Coverage (All Scenarios)",
+    subtitle = "Nominal = 95%; table reports mean coverage and share of scenarios < 95%"
   ) %>%
-  gt::tab_options(data_row.padding=px(1)) |> 
-  gt::fmt_markdown(columns = everything())
+  gt::tab_options(data_row.padding = gt::px(1))
 
-gt_gamma_overall
-gtsave(gt_gamma_overall,here::here("results/tbl_gamma_overall.png"))
+# Stratified tables by prop_extreme * n * magnitude level 
+# A tiny formatter for numeric columns
+num4 <- function(x) scales::number(x, accuracy = 0.0001)
+
+# Factory that returns a gt table for a given data frame + header labels
+make_gt_table <- function(df, title, subtitle) {
+  gt::gt(df) |>
+    gt::tab_header(title = title, subtitle = subtitle) |>
+    gt::tab_options(data_row.padding = gt::px(1))
+}
+
+# Split by scenario factors
+split_keys <- c("prop_extreme", "n", "magnitude_level")
+gamma_groups <- summ_gamma %>% dplyr::group_by(across(all_of(split_keys))) %>% dplyr::group_split()
+
+gt_bias_list <- lapply(gamma_groups, function(g) {
+  hdr <- g %>% dplyr::slice(1) %>% dplyr::select(all_of(split_keys))
+  sub_lab <- glue::glue("prop_extreme = {hdr$prop_extreme}, n = {hdr$n}, magnitude_level = {hdr$magnitude_level}")
+
+  tab <- g %>%
+    dplyr::group_by(treatment) %>%
+    dplyr::summarise(
+      scenarios      = dplyr::n(),
+      mean_bias      = mean(bias, na.rm = TRUE),
+      median_bias    = median(bias, na.rm = TRUE),
+      mad_bias       = mad(bias, na.rm = TRUE),
+      mean_abs_bias  = mean(abs(bias), na.rm = TRUE),
+      .groups = "drop"
+    ) %>%
+    dplyr::mutate(
+      mean_bias     = num4(mean_bias),
+      median_bias   = num4(median_bias),
+      mad_bias      = num4(mad_bias),
+      mean_abs_bias = num4(mean_abs_bias)
+    )
+
+  make_gt_table(
+    tab,
+    title = glue::glue("Gamma Interaction — Bias (Stratified)"),
+    subtitle = sub_lab
+  )
+})
+
+gt_empse_list <- lapply(gamma_groups, function(g) {
+  hdr <- g %>% dplyr::slice(1) %>% dplyr::select(all_of(split_keys))
+  sub_lab <- glue::glue("prop_extreme = {hdr$prop_extreme}, n = {hdr$n}, magnitude_level = {hdr$magnitude_level}")
+
+  tab <- g %>%
+    dplyr::group_by(treatment) %>%
+    dplyr::summarise(
+      scenarios   = dplyr::n(),
+      mean_emp_se = mean(emp_se, na.rm = TRUE),
+      sd_emp_se   = sd(emp_se, na.rm = TRUE),
+      .groups = "drop"
+    ) %>%
+    dplyr::mutate(
+      mean_emp_se = num4(mean_emp_se),
+      sd_emp_se   = num4(sd_emp_se)
+    )
+
+  make_gt_table(
+    tab,
+    title = glue::glue("Gamma Interaction — Empirical SE (Stratified)"),
+    subtitle = sub_lab
+  )
+})
+
+gt_cov_list <- lapply(gamma_groups, function(g) {
+  hdr <- g %>% dplyr::slice(1) %>% dplyr::select(all_of(split_keys))
+  sub_lab <- glue::glue("prop_extreme = {hdr$prop_extreme}, n = {hdr$n}, magnitude_level = {hdr$magnitude_level}")
+
+  tab <- g %>%
+    dplyr::group_by(treatment) %>%
+    dplyr::summarise(
+      scenarios       = dplyr::n(),
+      mean_cov        = mean(coverage, na.rm = TRUE),
+      p_cov_below_95  = mean(coverage < 0.95, na.rm = TRUE),
+      .groups = "drop"
+    ) %>%
+    dplyr::mutate(
+      mean_cov       = scales::percent(mean_cov, accuracy = 0.1),
+      p_cov_below_95 = scales::percent(p_cov_below_95, accuracy = 0.1)
+    )
+
+  make_gt_table(
+    tab,
+    title = glue::glue("Gamma Interaction — Coverage (Stratified)"),
+    subtitle = sub_lab
+  )
+})
+
+# Save all stratified tables for appendix
+# Ensure output directory exists (you already create "figures" earlier)
+if (!dir.exists("figures")) dir.create("figures", showWarnings = FALSE)
+
+# Helper to extract key labels for filenames
+label_from_group <- function(g) {
+  hdr <- g %>% dplyr::slice(1) %>% dplyr::select(all_of(split_keys))
+  paste0("prop", hdr$prop_extreme, "_n", hdr$n, "_mag", hdr$magnitude_level)
+}
+
+# Save Bias tables
+for (i in seq_along(gt_bias_list)) {
+  lab <- label_from_group(gamma_groups[[i]])
+  gt::gtsave(gt_bias_list[[i]],
+             filename = here::here(paste0("figures/table_bias_", lab, "_", dt, ".png")),
+             expand = 0)
+}
+
+# Save Empirical SE tables
+for (i in seq_along(gt_empse_list)) {
+  lab <- label_from_group(gamma_groups[[i]])
+  gt::gtsave(gt_empse_list[[i]],
+             filename = here::here(paste0("figures/table_empse_", lab, "_", dt, ".png")),
+             expand = 0)
+}
+
+# Save Coverage tables
+for (i in seq_along(gt_cov_list)) {
+  lab <- label_from_group(gamma_groups[[i]])
+  gt::gtsave(gt_cov_list[[i]],
+             filename = here::here(paste0("figures/table_cov_", lab, "_", dt, ".png")),
+             expand = 0)
+}
+
+## ATT version: For the same stratified tables for ATT (and/or d_est),  replace summ_gamma with summ_att <- summ_grid |> dplyr::filter(model == "ATT") and reuse the same blocks. All required fields were computed earlier in pipeline.
+
+```  
+
+## Over/under estimation  
+
+```{r over_underests}
+# Replicate-level indicator of underestimation for gamma model
+under_over_scen <- all_df %>%
+  dplyr::filter(model == "gamma") %>%
+  group_by(treatment, n, prop_extreme, magnitude_level) %>%
+  summarise(
+    under_rate = mean(est < true, na.rm = TRUE),
+    over_rate  = mean(est > true, na.rm = TRUE),
+    .groups = "drop"
+  )
+
+# Scenario-level merge with your empirical SE and coverage
+scenario_stats <- summ_gamma %>%
+  left_join(under_over_scen,
+            by = c("treatment", "n", "prop_extreme", "magnitude_level")) %>%
+  mutate(
+    # 'consistently under' if majority of reps are < 0 bias in that scenario
+    under_majority = under_rate > 0.5,
+    over_majority  = over_rate > 0.5
+  )
+
+# Aggregate to treatment-level “consistency” table
+tab_consistency <- scenario_stats %>%
+  group_by(treatment) %>%
+  summarise(
+    n_scen = dplyr::n(),
+    # scenario-mean bias (your 'bias' already is scenario-level mean bias)
+    avg_mean_bias = mean(bias, na.rm = TRUE),
+    med_mean_bias = median(bias, na.rm = TRUE),
+    share_scen_under = mean(bias < 0, na.rm = TRUE),    # % scenarios with negative mean bias
+    share_scen_over  = mean(bias > 0, na.rm = TRUE),
+    share_scen_under_majority = mean(under_majority, na.rm = TRUE),
+    mean_cov = mean(coverage, na.rm = TRUE),
+    mean_emp_se = mean(emp_se, na.rm = TRUE),
+    .groups = "drop"
+  )
+
+gt_consistency <- tab_consistency %>%
+  mutate(
+    avg_mean_bias = scales::number(avg_mean_bias, accuracy = 0.0001),
+    med_mean_bias = scales::number(med_mean_bias, accuracy = 0.0001),
+    share_scen_under = scales::percent(share_scen_under, accuracy = 0.1),
+    share_scen_over  = scales::percent(share_scen_over, accuracy = 0.1),
+    share_scen_under_majority = scales::percent(share_scen_under_majority, accuracy = 0.1),
+    mean_cov = scales::percent(mean_cov, accuracy = 0.1),
+    mean_emp_se = scales::number(mean_emp_se, accuracy = 0.0001)
+  ) %>%
+  gt::gt() %>%
+  gt::tab_header(
+    title = "Gamma Interaction: Consistency of Under/Over-Estimation by Treatment",
+    subtitle = "Share of scenarios with negative mean bias and with majority underestimation"
+  )
+
+gt_consistency
+```    
+
+
+## Plots  
+
+### Lollipop  
+
+```{r plots_dir}
+
+plot_bias_lollipop <- scenario_stats %>%
+  group_by(treatment) %>%
+  summarise(
+    mean_of_means = mean(bias, na.rm = TRUE),
+    sd_of_means   = sd(bias, na.rm = TRUE),
+    .groups = "drop"
+  ) %>%
+  mutate(sign = ifelse(mean_of_means < 0, "Underestimation (−)", "Overestimation (+)"),
+         treatment = forcats::fct_relevel(treatment, "raw","topcode","mean_adj","median_adj","truncate")) %>%
+  ggplot(aes(x = treatment, y = mean_of_means, color = sign)) +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  geom_segment(aes(xend = treatment, y = 0, yend = mean_of_means), linewidth = 1.2) +
+  geom_point(size = 3) +
+  scale_color_manual(values = c("Underestimation (−)" = "#C7372F", "Overestimation (+)" = "#2B6CB0")) +
+  labs(
+    title = "Gamma Interaction: Average Scenario-Mean Bias by Treatment",
+    subtitle = "Positive = overestimation; Negative = underestimation",
+    x = NULL, y = "Average of scenario means (bias)"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "top")
+
+plot_bias_lollipop
+ggsave(here::here(paste0("figures/gamma_bias_lollipop_", dt, ".png")),
+       plot_bias_lollipop, width = 8, height = 5, dpi = 300)
+```  
+
+### lollipop x2  
+```{r lolli_v2}
+# Reuse your scenario-level summary table for the Gamma interaction
+summ_gamma <- summ_grid %>%
+  dplyr::filter(model == "gamma") %>%
+  dplyr::mutate(
+    treatment = forcats::fct_relevel(
+      treatment, "raw", "topcode", "mean_adj", "median_adj", "truncate"
+    ),
+    # scenario id string and absolute bias to plot
+    scen_id = paste0("prop=", prop_extreme, " | mag=", magnitude_level, " | n=", n),
+    abs_bias = abs(bias)
+  )
+
+# Option 1: one lollipop per scenario: 
+
+make_lollipop <- function(df_one_scen) {
+  scen_lab <- df_one_scen$scen_id[1]
+  ggplot(df_one_scen, aes(x = abs_bias, y = treatment)) +
+    geom_segment(aes(x = 0, xend = abs_bias, y = treatment, yend = treatment),
+                 linewidth = 1.2, color = "grey55") +
+    geom_point(size = 3, color = "#2B6CB0") +
+    geom_text(aes(label = scales::number(abs_bias, accuracy = 0.0001)),
+              nudge_x = 0.002, size = 3.1, hjust = 0) +
+    labs(
+      title = "Absolute Bias by Treatment (Scenario Lollipop)",
+      subtitle = scen_lab,
+      x = "Absolute bias |bias| (scenario mean across reps)",
+      y = NULL
+    ) +
+    scale_x_continuous(expand = expansion(mult = c(0, .10))) +
+    theme_minimal() +
+    theme(panel.grid.major.y = element_blank())
+}
+
+# Split by scenario and save each plot
+by_scenario <- split(summ_gamma, summ_gamma$scen_id)
+
+for (nm in names(by_scenario)) {
+  p <- make_lollipop(by_scenario[[nm]])
+  out_path <- here::here(paste0("figures/lollipop_absbias_", gsub("[^A-Za-z0-9]+", "_", nm), "_", dt, ".png"))
+  ggsave(out_path, p, width = 7.5, height = 4.5, dpi = 300)
+}
+
+```  
+
+### Trend lines for how bias change with mag of extremes, prop of extremes 
+```{r trend_lines}
+# --- Trend lines including n as a scenario condition ---
+# Treat magnitude level as numeric for trend fitting
+scenario_stats_num <- scenario_stats %>%
+  dplyr::mutate(
+    mag = as.numeric(as.character(magnitude_level)),
+    treatment = forcats::fct_relevel(treatment, "raw","topcode","mean_adj","median_adj","truncate"),
+    n = as.factor(n)  # factor for clean facet labels
+  )
+
+plot_trends <- ggplot(
+  scenario_stats_num,
+  aes(x = mag, y = bias, color = treatment, group = treatment)
+) +
+  geom_hline(yintercept = 0, linetype = "dashed") +
+  stat_summary(fun = mean, geom = "line", linewidth = 1.1) +
+  stat_summary(fun = mean, geom = "point", size = 2) +
+  facet_grid(n ~ prop_extreme, labeller = label_both) +
+  scale_x_continuous(breaks = c(1, 2, 3), labels = c("1", "2", "3")) +
+  labs(
+    title = "Gamma Interaction: Trend in Mean Bias Across Magnitude of Extremes",
+    subtitle = "Rows = n; Cols = proportion extreme; lines show scenario-means averaged at each magnitude level",
+    x = "Magnitude level", y = "Scenario-mean bias"
+  ) +
+  theme_minimal() +
+  theme(legend.position = "bottom")
+
+plot_trends
+ggsave(here::here(paste0("figures/gamma_bias_trends_", dt, ".png")),
+       plot_trends, width = 11, height = 7, dpi = 300)
 ```
+
+2C. Coverage heatmap vs nominal 0.95  
+```{r plot_cov_heat}
+plot_cov_heat <- summ_gamma %>%
+  dplyr::mutate(
+    treatment = forcats::fct_relevel(treatment, "raw","topcode","mean_adj","median_adj","truncate"),
+    cell = paste0("prop=", prop_extreme, ", mag=", magnitude_level, ", n=", n)
+  ) %>%
+  ggplot(aes(x = treatment, y = cell, fill = coverage)) +
+  geom_tile(color = "white") +
+  scale_fill_gradient2(
+    low = "#C7372F", mid = "white", high = "#2B6CB0",
+    midpoint = 0.95, limits = c(0, 1), labels = scales::percent
+  ) +
+  labs(
+    title = "Gamma Interaction: Coverage by Treatment and Scenario",
+    subtitle = "Blue ≥ nominal 95%; red shows undercoverage; y-label encodes prop, mag, and n",
+    x = "Treatment", y = "Scenario (prop, mag, n)", fill = "Coverage"
+  ) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 30, hjust = 1))
+
+plot_cov_heat
+ggsave(here::here(paste0("figures/gamma_coverage_heat_", dt, ".png")),
+       plot_cov_heat, width = 11, height = 8, dpi = 300)
+```  
+2D. Consistency bars: % of scenarios with majority underestimation  
+```{r fig_underest}
+
+plot_under_consistency <- scenario_stats %>%
+  group_by(treatment) %>%
+  summarise(share_under_majority = mean(under_majority, na.rm = TRUE), .groups = "drop") %>%
+  mutate(treatment = forcats::fct_relevel(treatment, "raw","topcode","mean_adj","median_adj","truncate")) %>%
+  ggplot(aes(treatment, share_under_majority)) +
+  geom_col(fill = "#C7372F") +
+  geom_text(aes(label = scales::percent(share_under_majority, accuracy = 0.1)),
+            vjust = -0.3) +
+  scale_y_continuous(labels = scales::percent_format()) +
+  labs(
+    title = "Gamma Interaction: Consistency of Underestimation by Treatment",
+    subtitle = "% of scenarios where >50% of reps underestimated",
+    x = NULL, y = "% scenarios"
+  ) +
+  theme_minimal()
+
+plot_under_consistency
+ggsave(here::here(paste0("figures/gamma_under_consistency_", dt, ".png")),
+       plot_under_consistency, width = 8, height = 5, dpi = 300)
+```  
+
+3. Auto-generate sentences  
+Summarize direction, magnitude, reliability per treatment using tables above  
+```{r sentences}
+sentences <- tab_consistency %>%
+  mutate(
+    dir = ifelse(as.numeric(avg_mean_bias) < 0, "underestimated", "overestimated"),
+    abs_avg = abs(as.numeric(avg_mean_bias)),
+    txt = glue::glue(
+      "On average across {n_scen} scenarios, the {treatment} method {dir} ",
+      "the Gamma interaction by {scales::number(abs_avg, accuracy = 0.0001)}. ",
+      "Median scenario-mean bias was {med_mean_bias}. ",
+      "{scales::percent(share_scen_under, accuracy = 0.1)} of scenarios had negative mean bias, ",
+      "and {scales::percent(share_scen_under_majority, accuracy = 0.1)} showed majority underestimation. ",
+      "Mean empirical SE was {mean_emp_se}, and mean coverage was {scales::percent(mean_cov, accuracy = 0.1)}."
+    )
+  ) %>%
+  dplyr::pull(txt)
+
+cat(paste0("- ", sentences, collapse = "\n"))
+```  
+## ANOVA effect-size reporting for eta-squared with p-values    
+
+Reusable helper to extract eta-squared and p-values from an aov object  
+This should pull p-values from `broom::tidy()` and eta-sq from `effectsize::eta_squared()`
+which matches with how ANOVAs are already fit. 
+```{r aov_eta_helper}
+eta_with_p <- function(aov_obj, model_label,
+                       type = c("eta2", "partial", "generalized"),
+                       include_ci = TRUE, conf_level = 0.90) {
+  type <- match.arg(type)
+
+  # 1) p-values from ANOVA table (works for aov() and car::Anova() once tidied)
+  tab_p <- broom::tidy(aov_obj) %>%
+    dplyr::filter(!is.na(term), term != "Residuals") %>%
+    dplyr::select(term, p.value)
+
+  # 2) effect sizes from effectsize::eta_squared()
+  #    NOTE: ci level is passed via 'ci', not 'ci_level'
+  ci_arg <- if (include_ci) conf_level else NULL
+  es <- switch(
+    type,
+    eta2 = effectsize::eta_squared(aov_obj, ci = ci_arg),
+    partial = effectsize::eta_squared(aov_obj, partial = TRUE, ci = ci_arg),
+    generalized = effectsize::eta_squared(aov_obj, generalized = TRUE, ci = ci_arg)
+  ) %>%
+    as.data.frame()
+
+  # effectsize names are typically: Parameter, Eta2, CI_low, CI_high
+  # We'll standardize/guard against name variations just in case.
+  nm <- names(es)
+  # Map names safely
+  if ("Parameter" %in% nm) names(es)[names(es) == "Parameter"] <- "term"
+  if ("Eta2" %in% nm) names(es)[names(es) == "Eta2"] <- "eta2"
+  if ("CI_low" %in% nm) names(es)[names(es) == "CI_low"] <- "ci_low"
+  if ("CI_high" %in% nm) names(es)[names(es) == "CI_high"] <- "ci_high"
+
+  # 3) merge and label
+  out <- dplyr::left_join(es, tab_p, by = "term") %>%
+    dplyr::mutate(
+      model  = model_label,
+      es_type = switch(type,
+        eta2 = "eta^2",
+        partial = "partial eta^2",
+        generalized = "generalized eta^2"
+      ),
+      stars = dplyr::case_when(
+        !is.na(p.value) & p.value < .001 ~ "***",
+        !is.na(p.value) & p.value < .01  ~ "**",
+        !is.na(p.value) & p.value < .05  ~ "*",
+        !is.na(p.value) & p.value < .10  ~ "†",
+        TRUE ~ ""
+      )
+    ) %>%
+    dplyr::select(model, es_type, term, eta2, ci_low, ci_high, p.value, stars)
+
+  out
+}
+
+```  
+
+Apply to ANOVAs and build tables 
+Groups rows by model (gamma bias, gamma coverage, ATT: bias), reports partial eta-eq, 90% CI, p-value, and sign. marks.
+
+If we want Type II/III SS rather than the Type I default of `aov()`, can refit with `car::Anova()` and pass that object to `effectsize::eta_squared()`. (ASK TSAI)  
+
+```{r}
+# ---- Collect effect sizes for all models ----
+es_eta2 <- dplyr::bind_rows(
+  eta_with_p(aov_gamma_bias,   "Gamma bias",         "eta2"),
+  eta_with_p(aov_gamma_emp_se, "Gamma empirical SE", "eta2"),
+  eta_with_p(aov_gamma_cov,    "Gamma coverage",     "eta2"),
+  eta_with_p(aov_att_hat,      "ATT: est",           "eta2"),
+  eta_with_p(aov_att_bias,     "ATT: bias",          "eta2"),
+  eta_with_p(aov_att_d,        "ATT: d_est",         "eta2")
+)
+
+es_partial <- dplyr::bind_rows(
+  eta_with_p(aov_gamma_bias,   "Gamma bias",         "partial"),
+  eta_with_p(aov_gamma_emp_se, "Gamma empirical SE", "partial"),
+  eta_with_p(aov_gamma_cov,    "Gamma coverage",     "partial"),
+  eta_with_p(aov_att_hat,      "ATT: est",           "partial"),
+  eta_with_p(aov_att_bias,     "ATT: bias",          "partial"),
+  eta_with_p(aov_att_d,        "ATT: d_est",         "partial")
+)
+
+es_gen <- dplyr::bind_rows(
+  eta_with_p(aov_gamma_bias,   "Gamma bias",         "generalized"),
+  eta_with_p(aov_gamma_emp_se, "Gamma empirical SE", "generalized"),
+  eta_with_p(aov_gamma_cov,    "Gamma coverage",     "generalized"),
+  eta_with_p(aov_att_hat,      "ATT: est",           "generalized"),
+  eta_with_p(aov_att_bias,     "ATT: bias",          "generalized"),
+  eta_with_p(aov_att_d,        "ATT: d_est",         "generalized")
+)
+
+# ---- Main table: partial eta^2 with p-values ----
+tbl_partial <- es_partial %>%
+  dplyr::mutate(
+    eta2_fmt = ifelse(is.na(eta2), NA_character_, scales::number(eta2, accuracy = 0.0001)),
+    ci_fmt = dplyr::if_else(
+      is.na(ci_low) | is.na(ci_high), "—",
+      paste0("[", scales::number(ci_low, accuracy = 0.0001), ", ",
+                  scales::number(ci_high, accuracy = 0.0001), "]")
+    ),
+    p_fmt = ifelse(is.na(p.value), "—", scales::pvalue(p.value, accuracy = 0.001))
+  ) %>%
+  dplyr::select(model, term, `partial eta^2` = eta2_fmt, CI = ci_fmt, `p-value` = p_fmt, sig = stars)
+
+gt_partial <- tbl_partial %>%
+  gt::gt(groupname_col = "model") %>%
+  gt::tab_header(
+    title = gt::md("**ANOVA Effects: Partial η² with 90% CI and p-values**"),
+    subtitle = "Design factors: treatment, n, prop_extreme, magnitude_level"
+  ) %>%
+  gt::tab_source_note("Signif.: *** < .001, ** < .01, * < .05, † < .10") %>%
+  gt::cols_align(align = "center", columns = c(`partial eta^2`, CI, `p-value`, sig))
+
+gt_partial
+```  
+
+
+
+
+
 
 
 
